# tombo

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bacon.toml  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
.sqlx/: query-0f21b913c9a6563070dd3ecde1b8d67037a2b79ec9fb40d65fc6738bc4944f2c.json  query-211e46973e5750b266549526e49099492d7d45f1c865499783cbc73327abae2b.json  query-33f8e6db03f75c0c8b68e7e5526b55afb7e1380fc6782e53cfa2def05f4972ea.json  query-3a5317133ba07bd9dec9a5a10608eb6799b2607708a9921807f08bfb59457085.json  query-3fa5376bec04b77720589399304dc9c4db5e1122a0baba06eafcc60ced4c250e.json  query-6200a705dee87953931b20c5072251882710e82bad30d089c173bbd824c502ee.json  query-71b99038dcf2ca52f8adabb7a89be2e2071271ae02b790f6bd6b6663a25e2a70.json  query-80cfda1da522c1ae6b43bddbae6bd1fadddf860108abd3dfb8f9360fb44ca5b0.json  query-9216e269bdfeafe08a0a9e34f7477aadef0d85e2d2b40b93dfcb67ed009f6a2c.json  query-9885cd35357e656c62011f10e2a02198eb217408bca9224b2f3e21c3aace9a1b.json  query-9c2c822dc31b2cd9f6761c500fd491ca2138c42bdcc07ff9b6b6623ce13ee3a3.json  query-f901d0b2c375430e7330fe07a8111bd96cd564512a8ebc32c3acdef47e235fc0.json  query-f9d174cda0909797fcdd92ab442eabef238cbd0992ac06a6e844fe9e258f6ec5.json
app/: package-lock.json  package.json
backend/: .gitignore  Cargo.toml  bacon.toml
backend/.sqlx/: query-326f991009e6d8fb28d4a217aee200fc95048c49a31185a523a18559dbeaf714.json  query-52958684fa52b7a4753cd4356482dc6c655102a501d8aa48e03b1fb3dbbad02d.json  query-82f57bd2190d0bc74e8dced99f7f617a42503f7b54357f1186a2fe87a14818f2.json  query-a421648867ab9e1c424ea068ebf4e1c7b36db1507e8d0dd2393b5bdc7b6d8be0.json  query-b8506e46741faffca50425052d57fecaf1c7a28bd4e2585011862c58f2222b37.json
backend/migrations/: 20250518181327_create_prompts.sql  20250525163438_create_tags.sql
backend/src/: main.rs
browser-extension/: background.js  manifest.json  popup.html  popup.js  styles.css
frontend/: package-lock.json  package.json
migrations/: 20250503145628_create_prompts.sql  20250518205722_create_users.sql  20250525092828_prompt_creator_and_prompt_parent.sql
public/: style.css
src/: db.rs  handler.rs  input.css  main.rs  types.rs  users.rs
templates/: add_prompt.html  details_prompt.html  index.html  layout.html  (+4 more)
(+31 files in other folders)
