[package]
name = "tombo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "uuid", "time"] }
askama = { version = "0.14"}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5.3"
tower-http = { version = "0.6.4", features = ["fs"] }
axum-login = "0.17.0"
tower-sessions = { version = "0.14.0", default-features = false, features = [
  "signed",
] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
time = { version = "0.3.41", features = ["serde", "macros"] }
thiserror = "2.0.12"
password-auth = "1.0.0"
async-trait = "0.1.88"
axum-messages = "0.8.0"
