[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "uuid", "time", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5.3"
tower-http = { version = "0.6.4", features = ["fs", "cors"] }
time = { version = "0.3.41", features = ["serde", "macros"] }
jsonwebtoken = "9.3"
once_cell = "1.19"
